--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+# Solution files
+*.sublime-workspace
+*~
+*.mk
+*.session
+*.sample
+*.unit
+*.bench
+*.user
+*.vcproj
+*.ncb
+*.sln
+*.suo
+*.exe
+*.desktop
+*.orig
+*_
+*.manifest
+*.res
+*.ilk
+*.pdb
+*.resource.txt
+*.bak
+*.swp
+.DS_Store
+.project
+.cproject
+*.sublime-workspace
+*.instrumented.obj
+
+
 # Compiled Object files
 *.slo
 *.lo
