--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -1,7 +1,7 @@
 PROJECT_NAME            = "Boost.Dispatch"
 PROJECT_BRIEF           = "Unit and Performances Testing"
 PROJECT_LOGO            =
-PROJECT_NUMBER          = "@NSTEST_VERSION_STRING@ @nstest_release@"
+PROJECT_NUMBER          = "@BOOST_DISPATCH_VERSION_STRING@ @nstest_release@"
 
 STRIP_FROM_PATH         = @Boost.Dispatch_SOURCE_DIR@/include
 BUILTIN_STL_SUPPORT     = YES
@@ -26,8 +26,8 @@ RECURSIVE               = YES
 
 #EXCLUDE                = @Boost.Dispatch_SOURCE_DIR@/???
 
-EXAMPLE_PATH            = @Boost.Dispatch_SOURCE_DIR@/example
-EXAMPLE_PATH           += @Boost.Dispatch_SOURCE_DIR@/test/unit
+EXAMPLE_PATH            = @Boost.Dispatch_SOURCE_DIR@/examples
+#EXAMPLE_PATH           += @Boost.Dispatch_SOURCE_DIR@/test/unit
 EXAMPLE_PATH           += @Boost.Dispatch_SOURCE_DIR@/doc/
 EXAMPLE_RECURSIVE       = YES
 
