--- a/test/meta/CMakeLists.txt
+++ b/test/meta/CMakeLists.txt
@@ -13,6 +13,7 @@ add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
 
 set ( SOURCES
       model_of.cpp
+      primitive_of.cpp
       transfer_qualifiers.cpp
       value_of.cpp
     )
