Use NSTest as a submodule instead of an external project
To simplify Boost integration, let's drag NSTest whenever we checkout
the repository instead of making it CMake dependant.

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = doc/html
 	url = https://github.com/NumScale/boost.dispatch.git
 	branch = gh-pages
+[submodule "_deps/nstest"]
+	path = _deps/nstest
+	url = https://github.com/NumScale/nstest.git
