--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ include(parse_revision)
 ##===================================================================================================
 include_directories ( ${PROJECT_SOURCE_DIR}/include
                       ${Boost_INCLUDE_DIRS}
-                      ${PROJECT_SOURCE_DIR}/_deps/nstest/include
+                      ${PROJECT_SOURCE_DIR}/deps/include
                     )
 
 ##===================================================================================================
