--- a/.travis.yml
+++ b/.travis.yml
@@ -1,48 +1,45 @@
+# We deals with C++
 language: cpp
 
-compiler:
-  - gcc
-  - clang
+# Setup the test matrix
+matrix:
+  include:
+    - compiler: gcc
+      os: linux
+      env: TOOLSET=g++-4.8
+    - compiler: gcc
+      os: linux
+      env: TOOLSET=g++-4.9
+    - compiler: gcc
+      os: linux
+      env: TOOLSET=g++-5
+    - compiler: clang
+      os: linux
+      env: TOOLSET=clang++
 
+# Install all dependencies
 before_install:
- - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
- - sudo apt-get update -qq
- - wget http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.bz2/download -O /tmp/boost.tar.bz2
- - tar jxf /tmp/boost.tar.bz2
- - mv boost_1_58_0 $PWD/boost-trunk
- - export BOOST_ROOT="$PWD/boost-trunk"
- - cd $BOOST_ROOT
- - ./bootstrap.sh
- - cd $TRAVIS_BUILD_DIR
-
-install:
+# Get packages
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository -y ppa:h-rayflood/llvm
+  - sudo apt-get update -qq
   - sudo apt-get install -qq gcc-4.8 g++-4.8
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-  - if [[ ${CC} = gcc ]]; then
-      wget http://downloads.sourceforge.net/ltp/lcov-1.11.tar.gz &&
-      tar xvfz lcov-1.11.tar.gz &&
-      sudo make -C lcov-1.11 install &&
-      rm -rf lcov-1.11.tar.gz lcov-1.11 &&
-      sudo cp -v `which gcov-4.8` `which gcov`;
-    fi
+  - bash ./script/travis/install.sh
+  - export BOOST_ROOT="$HOME/boost-trunk"
 
+# Prepare build
 before_script:
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET
 
+# Build unit and run test
 script:
-  - make
   - make unit
-  - if [[ ${CC} = gcc ]]; then
-      make coverage;
-    fi
+  - make coverage
+  - if [[ ${CC} = gcc ]]; then make coverage; fi
   - make test
 
 after_success:
-  - if [[ ${CC} = gcc ]]; then
-      bash <(curl -s https://codecov.io/bash);
-    fi
-
-os:
-  - linux
+  - if [[ ${CC} = gcc ]]; then bash <(curl -s https://codecov.io/bash); fi
