--- a/test/adapted/CMakeLists.txt
+++ b/test/adapted/CMakeLists.txt
@@ -13,6 +13,7 @@ add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
 
 set ( SOURCES
       boost_array.cpp
+      boost_fusion.cpp
       parent.cpp
       std_array.cpp
       std_integral_constant.cpp
