--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,54 @@
-# We deals with C++
+sudo: false
 language: cpp
 
-# Setup the test matrix
 matrix:
   include:
-    - compiler: gcc
-      os: linux
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
       env: TOOLSET=g++-4.8
-    - compiler: gcc
-      os: linux
-      env: TOOLSET=g++-4.9
-    - compiler: gcc
-      os: linux
-      env: TOOLSET=g++-5
-    - compiler: clang
-      os: linux
-      env: TOOLSET=clang++
 
-# Install all dependencies
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.9']
+      env: TOOLSET=g++-4.9
+
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: TOOLSET=g++-5
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
+          packages: ['clang-3.5']
+      env: TOOLSET=clang++-3.5
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
+          packages: ['clang-3.6']
+      env: TOOLSET=clang++-3.6
+
+# Install boost
 before_install:
-# Get packages
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo add-apt-repository -y ppa:h-rayflood/llvm
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq gcc-4.8 g++-4.8
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-  - bash ./script/travis/install.sh
+  - bash ./script/travis/install_boost.sh
   - export BOOST_ROOT="$HOME/boost-trunk"
 
-# Prepare build
+# # Prepare build
 before_script:
   - mkdir build
   - cd build
@@ -37,9 +57,4 @@ before_script:
 # Build unit and run test
 script:
   - make unit
-  - make coverage
-  - if [[ ${CC} = gcc ]]; then make coverage; fi
   - make test
-
-after_success:
-  - if [[ ${CC} = gcc ]]; then bash <(curl -s https://codecov.io/bash); fi
