--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,15 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.8']
-      env: TOOLSET=g++-4.8
+      env: CXX_STD=11 TOOLSET=g++-4.8
+
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
+      env: CXX_STD=14 TOOLSET=g++-4.8
 
     - os: linux
       compiler: gcc
@@ -17,7 +25,15 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.9']
-      env: TOOLSET=g++-4.9
+      env: CXX_STD=11 TOOLSET=g++-4.9
+
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.9']
+      env: CXX_STD=14 TOOLSET=g++-4.9
 
     - os: linux
       compiler: gcc
@@ -25,7 +41,15 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-5']
-      env: TOOLSET=g++-5
+      env: CXX_STD=11 TOOLSET=g++-5
+
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=14 TOOLSET=g++-5
 
     - os: linux
       compiler: clang
@@ -33,7 +57,15 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
           packages: ['clang-3.5']
-      env: TOOLSET=clang++-3.5
+      env: CXX_STD=11 TOOLSET=clang++-3.5
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
+          packages: ['clang-3.5']
+      env: CXX_STD=14 TOOLSET=clang++-3.5
 
     - os: linux
       compiler: clang
@@ -41,11 +73,23 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
           packages: ['clang-3.6']
-      env: TOOLSET=clang++-3.6
+      env: CXX_STD=11 TOOLSET=clang++-3.6
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
+          packages: ['clang-3.6']
+      env: CXX_STD=14 TOOLSET=clang++-3.6
 
     - os: osx
       compiler: clang
-      env: TOOLSET=clang++
+      env: CXX_STD=11 TOOLSET=clang++
+
+    - os: osx
+      compiler: clang
+      env: CXX_STD=14 TOOLSET=clang++
 
 # Install boost
 before_install:
@@ -56,7 +100,7 @@ before_install:
 before_script:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET
+  - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET -DCXX_STD=$CXX_STD
 
 # Build unit and run test
 script:
