--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
+##===================================================================================================
+##                 Copyright 2015   NumScale SAS
+##
+##                   Distributed under the Boost Software License, Version 1.0.
+##                        See accompanying file LICENSE.txt or copy at
+##                            http://www.boost.org/LICENSE_1_0.txt
+##===================================================================================================
 sudo: false
 language: cpp
 
