Implements parent_of

--- a/test/meta/CMakeLists.txt
+++ b/test/meta/CMakeLists.txt
@@ -22,6 +22,7 @@ set ( SOURCES
       make_floating.cpp
       make_integer.cpp
       model_of.cpp
+      parent_of.cpp
       primitive_of.cpp
       scalar_of.cpp
       sign_of.cpp
