Added the pointer_rank traits

--- a/test/meta/CMakeLists.txt
+++ b/test/meta/CMakeLists.txt
@@ -23,6 +23,7 @@ set ( SOURCES
       make_integer.cpp
       model_of.cpp
       parent_of.cpp
+      pointer_rank.cpp
       primitive_of.cpp
       scalar_of.cpp
       sign_of.cpp
