--- a/test/meta/CMakeLists.txt
+++ b/test/meta/CMakeLists.txt
@@ -25,6 +25,7 @@ set ( SOURCES
       parent_of.cpp
       pointer_rank.cpp
       primitive_of.cpp
+      remove_pointers.cpp
       scalar_of.cpp
       sign_of.cpp
       transfer_qualifiers.cpp
