--- a/.travis.yml
+++ b/.travis.yml
@@ -86,18 +86,16 @@ matrix:
       compiler: clang
       env: CXX_STD=11 TOOLSET=clang++
 
-# Install boost
-before_install:
-  - bash ./script/travis/install.sh
-  - export BOOST_ROOT="$HOME/boost-trunk"
 
 # Prepare build
 before_script:
+  - export BOOST_ROOT=build/_install/include
   - mkdir build
   - cd build
-  - cmake .. -DIS_TRAVIS_CI= -DCMAKE_CXX_COMPILER=$TOOLSET -DCXX_STD=$CXX_STD -DTOOLSET=$TOOLSET
+  - cmake .. -DIS_TRAVIS_CI= -DCMAKE_CXX_COMPILER=$TOOLSET
 
 # Build unit and run test
 script:
-  - make  -k unit
+  - make update.boost-header-only | grep -v "^-- Install" # Silent installation
+  - make -k unit
   - ctest -D Experimental
