Shorter target names

--- a/test/adapted/CMakeLists.txt
+++ b/test/adapted/CMakeLists.txt
@@ -6,8 +6,6 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
-
 set ( SOURCES
       boost_array.cpp
       boost_fusion.cpp
@@ -19,5 +17,5 @@ set ( SOURCES
       std_tuple.cpp
     )
 
-make_unit( "boost.dispatch.adapted" ${SOURCES})
-make_coverage("boost.dispatch.adapted" ${SOURCES})
+make_unit( "adapted" ${SOURCES})
+make_coverage("adapted" ${SOURCES})
