--- a/test/api/CMakeLists.txt
+++ b/test/api/CMakeLists.txt
@@ -6,12 +6,10 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
-
 set ( SOURCES
       as.cpp
       dispatch.cpp
     )
 
-make_unit( "boost.dispatch.api" ${SOURCES})
-make_coverage("boost.dispatch.api" ${SOURCES})
+make_unit( "api" ${SOURCES})
+make_coverage("api" ${SOURCES})
